--- a/FaithConnect/Views/Home/Verify.cshtml
+++ b/FaithConnect/Views/Home/Verify.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Verify";
     Layout = null;
 }
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,11 +22,10 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
     <link rel="preload" as="style" href="~/Assets/login/css/mbr-additional.css?v=CW5Q19">
     <link rel="stylesheet" href="~/Assets/login/css/mbr-additional.css?v=CW5Q19" type="text/css">
-    <link rel="stylesheet" href="~/Assets/login/css/signupstyle.css" type="text/css">
-
-
 </head>
 <body>
+    
+
     @using (Html.BeginForm())
     {
         <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
@@ -43,36 +41,25 @@
                     <div class="col-12 col-lg-6 item-wrapper">
                         <div class="mbr-section-head mb-5">
                             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
-                                <strong>Login</strong>
+                                <strong>Enter OTP</strong>
                             </h3>
                         </div>
+                        @if (TempData["SuccessMessage"] != null)
+                        {
+                            <div class="alert alert-success text-center">
+                                @TempData["SuccessMessage"]
+                            </div>
+                        }
                         <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
                             <input type="hidden" name="email" data-form-email="true" value="ypwsixtd6j+sxA5zWOep7XVXQO4F9EeHqywLleKZfYhbwnW5/2ZjAhfY3Ss/QghZR+yxAAC849AQ3gP4lSlJ8q7SD8b50I+YY/F2P50dxhBF+WoJkdPipzKYzpPyUicJ">
                             <div class="dragArea row">
                                 <div class="col-12 form-group mb-3">
-                                    <input type="text" class="form-control" name="username" value="" placeholder="Username" required />
+                                    @TempData["error"]
+                                    <input type="hidden" name="username" value="@TempData["username"]" />
+                                    <input type="number" class="form-control" name="code" value="" required />
                                 </div>
                                 <div class="col-12 form-group mb-3">
-                                    <input type="password" class="form-control" name="password" value="" placeholder="Password" required />
-                                </div>
-                                <div class="col-12 form-group">
-                                    @if (!String.IsNullOrEmpty(ViewBag.Error as String))
-                                    {
-                                        <div style="color: red;">
-                                            @ViewBag.Error
-                                        </div>
-                                    }
-                                </div>
-                                <div class="col-12 form-group mb-3">
-                                    <input type="submit" class="btn btn-success w-100" value="Login" />
-                                </div>
-                                <div class="col-12 form-group mb-3 text-center">
-                                    <hr class="w-100">
-                                    <span>OR</span>
-                                    <hr class="w-100">
-                                </div>
-                                <div class="col-12 form-group mb-3">
-                                    <a href="/Home/SignUp" class="btn btn-outline-light w-100" style="background-color:#876f54; color: white;">Sign Up</a>
+                                    <input type="submit" class="btn btn-success w-100" value="Verify" />
                                 </div>
                             </div>
                         </div>
@@ -80,13 +67,8 @@
                 </div>
             </div>
         </section>
-
     }
-
     <section data-bs-version="5.1" class="footer2 cid-uagYZQ5ASz" once="footers" id="footer02-1y">
-
-
-
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6 center mt-2 mb-3">
@@ -94,11 +76,10 @@
                         © Copyright 2024 Faith Connect - All Rights Reserved
                     </p>
                 </div>
-
             </div>
         </div>
     </section>
-    
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
