--- a/FaithConnect/Views/Home/MyProfile.cshtml
+++ b/FaithConnect/Views/Home/MyProfile.cshtml
@@ -35,9 +35,9 @@
                             <div class="cover-body d-flex justify-content-between align-items-center">
                                 <div>
                                     @{
-                                        string profileImage = string.IsNullOrEmpty(Model.imageFile) ? Url.Content("~/Assets/images/default-profile.png") : Url.Content("~/UploadedFiles/" + Model.imageFile);
+                                        string profileImage = string.IsNullOrEmpty(Model.Image.FirstOrDefault()?.imageFile) ? Url.Content("~/UploadedFiles/default.png") : Url.Content("~/UploadedFiles/" + Model.Image.FirstOrDefault()?.imageFile);
                                     }
-                                    <img class="profile-pic" src="@profileImage" alt="profile">
+                                    <img class="rounded-circle me-2" src="@profileImage" alt="profile" style="width: 120px; height: 120px; object-fit: cover">
                                     <span class="profile-name">@Model.first_name @Model.last_name</span>
                                 </div>
                                 <div class="d-none d-md-block">
@@ -74,8 +74,8 @@
                                 </p>
                             </div>
                             <div class="mt-3">
-                                <label class="tx-11 font-weight-bold mb-0 text-uppercase">Lives:</label>
-                                <p class="text-muted">@Model.location</p>
+                                <label class="tx-11 font-weight-bold mb-0 text-uppercase">Address:</label>
+                                <p class="text-muted">@Model.address</p>
                             </div>
                             <div class="mt-3">
                                 <label class="tx-11 font-weight-bold mb-0 text-uppercase">Email:</label>
@@ -112,40 +112,51 @@
                         </button>
                     </div>
                     <div class="modal-body">
+                        @Html.HiddenFor(model => model.id)
+                        @Html.HiddenFor(model => model.userId)
+                        @Html.HiddenFor(model => model.date_created)
+                        @Html.HiddenFor(model => model.status)
                         <div class="form-group">
                             <label for="profilePicture">Profile Picture</label>
-                            <input type="file" name="profilePicture" class="form-control">
+                            <input type="file" name="profilePicture" accept="image/*" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="firstname">First Name</label>
-                            <input type="text" name="firstname" class="form-control" value="@Model.first_name">
+                            @Html.EditorFor(model => model.first_name, new { htmlAttributes = new { @class = "form-control", placeholder = @Model.first_name, required = "required" } })
+                            @Html.ValidationMessageFor(model => model.first_name, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
                             <label for="lastname">Last Name</label>
-                            <input type="text" name="lastname" class="form-control" value="@Model.last_name">
+                            @Html.EditorFor(model => model.last_name, new { htmlAttributes = new { @class = "form-control", placeholder = @Model.last_name, required = "required" } })
+                            @Html.ValidationMessageFor(model => model.last_name, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone</label>
-                            <input type="text" name="phone" class="form-control" value="@Model.phone">
+                            @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control", placeholder = @Model.phone, required = "required" } })
+                            @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" name="email" class="form-control" value="@Model.email" readonly>
+                            @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control", placeholder = @Model.email, required = "required", @readonly = "readonly" } })
+                            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
                             <label for="bio">Bio</label>
-                            <textarea name="bio" class="form-control">@Model.bio</textarea>
+                            @Html.EditorFor(model => model.bio, new { htmlAttributes = new { @class = "form-control", placeholder = @Model.bio, required = "required" } })
+                            @Html.ValidationMessageFor(model => model.bio, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
                             <label for="location">Location</label>
-                            <input type="text" name="location" class="form-control" value="@Model.location">
+                            @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control", placeholder = @Model.address, required = "required" } })
+                            @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <input type="submit" class="btn btn-success" value="Save Changes" style="background-color:saddlebrown" />
                     </div>
                 }
+
             </div>
         </div>
     </div>
@@ -153,4 +164,3 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
