--- a/FaithConnect/Views/Home/Signup.cshtml
+++ b/FaithConnect/Views/Home/Signup.cshtml
@@ -1,4 +1,4 @@
-﻿@model FaithConnect.UserAccount 
+﻿@model FaithConnect.UserAccount
 @{
     ViewBag.Title = "SignUp";
     Layout = null;
@@ -26,74 +26,140 @@
     <link rel="stylesheet" href="~/Assets/login/css/mbr-additional.css?v=CW5Q19" type="text/css">
 </head>
 <body>
-   @using (Html.BeginForm())
-   {
-    <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
+    @using (Html.BeginForm())
+    {
+        <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
 
-    <section data-bs-version="5.1" class="form03 cid-uagZCfXL7S" id="form03-1z">
-        <div class="container">
-            <div class="row justify-content-center align-items-center">
-                <div class="col-12 col-lg-6">
-                    <div class="image-wrapper">
-                        <img class="w-100" src="~/Assets/login/img/Logo.png" alt="Faith Connect Logo">
+        <section data-bs-version="5.1" class="form03 cid-uagZCfXL7S" id="form03-1z">
+            <div class="container">
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-12 col-lg-6">
+                        <div class="image-wrapper">
+                            <img class="w-100" src="~/Assets/login/img/Logo.png" alt="Faith Connect Logo">
+                        </div>
                     </div>
-                </div>
-                <div class="col-12 col-lg-6 item-wrapper">
-                    <div class="mbr-section-head mb-5">
-                        <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
-                            <strong>SignUp</strong>
-                        </h3>
-                    </div>
-                    <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
-                        <div class="dragArea row">
-                            <div class="col-12 form-group mb-3">
-                                <input type="text" class="form-control" name="firstname" placeholder="First Name" required />
-                            </div>
-                            <div class="col-12 form-group mb-3">
-                                <input type="text" class="form-control" name="lastname" placeholder="Last Name" required />
-                            </div>
-                            <div class="col-12 form-group mb-3">
-                                <input type="text" class="form-control" name="phone" placeholder="Phone#" pattern="\d{10,11}" title="Please enter a valid phone number with 10 to 11 digits" required />
-                            </div>
-                            <div class="col-12 form-group mb-3">
-                                <input type="text" class="form-control" name="email" placeholder="Email" required />
-                                @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12 form-group mb-3">
-                                <input type="text" class="form-control" name="username" placeholder="Username" required />
-                                @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12 form-group mb-3">
-                                <input type="password" class="form-control" name="password" placeholder="Password" required />
-                                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12 form-group mb-3">
-                                <input type="password" class="form-control" name="ConfirmPass" placeholder="Confirm Password" required />
-                                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12 form-group mb-3 mb-3">
-                                @Html.DropDownList("Role", (IEnumerable<SelectListItem>)ViewBag.Role, new { @class = "form-control" })
-                            </div>
-                            <div class="col-12 form-group">
-                                @if (!String.IsNullOrEmpty(ViewBag.Error as String))
-                                {
-                                    <div style="color: red;">
-                                        @ViewBag.Error
-                                    </div>
-                                }
-                            </div>
-                            <p class="signin-link">Already have an account? Click here to <a href="/Home/Login">Login.</a></p>
-                            <div class="col-12 form-group mb-3">
-                                <input type="submit" class="btn btn-success w-100" value="Create Account" />
+                    <div class="col-12 col-lg-6 item-wrapper">
+                        <div class="mbr-section-head mb-5">
+                            <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
+                                <strong>SignUp</strong>
+                            </h3>
+                        </div>
+                        <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
+                            <div class="dragArea row">
+                                <div class="col-12 form-group mb-3">
+                                    <input type="text" class="form-control" name="firstname" placeholder="First Name" required />
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <input type="text" class="form-control" name="lastname" placeholder="Last Name" required />
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <input type="text" class="form-control" name="phone" placeholder="Phone#" pattern="\d{10,11}" title="Please enter a valid phone number with 10 to 11 digits" required />
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <input type="text" class="form-control" name="email" placeholder="Email" required />
+                                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <select class="form-control" name="city" id="city" required>
+                                        <option value="" disabled selected>City</option>
+                                        <option value="Cebu City">Cebu City</option>
+                                        <option value="Mandaue City">Mandaue City</option>
+                                        <option value="Lapu-Lapu City">Lapu-Lapu City</option>
+                                        <option value="Talisay City">Talisay City</option>
+                                        <option value="Toledo City">Toledo City</option>
+                                        <option value="Naga City">Naga City</option>
+                                        <option value="Carcar City">Carcar City</option>
+                                        <option value="Bogo City">Bogo City</option>
+                                        <option value="Alcantara">Alcantara</option>
+                                        <option value="Alcoy">Alcoy</option>
+                                        <option value="Alegria">Alegria</option>
+                                        <option value="Aloguinsan">Aloguinsan</option>
+                                        <option value="Argao">Argao</option>
+                                        <option value="Asturias">Asturias</option>
+                                        <option value="Badian">Badian</option>
+                                        <option value="Balamban">Balamban</option>
+                                        <option value="Bantayan">Bantayan</option>
+                                        <option value="Barili">Barili</option>
+                                        <option value="Boljoon">Boljoon</option>
+                                        <option value="Borbon">Borbon</option>
+                                        <option value="Carmen">Carmen</option>
+                                        <option value="Catmon">Catmon</option>
+                                        <option value="Compostela">Compostela</option>
+                                        <option value="Consolacion">Consolacion</option>
+                                        <option value="Cordova">Cordova</option>
+                                        <option value="Daanbantayan">Daanbantayan</option>
+                                        <option value="Dalaguete">Dalaguete</option>
+                                        <option value="Dumanjug">Dumanjug</option>
+                                        <option value="Ginatilan">Ginatilan</option>
+                                        <option value="Liloan">Liloan</option>
+                                        <option value="Madridejos">Madridejos</option>
+                                        <option value="Malabuyoc">Malabuyoc</option>
+                                        <option value="Medellin">Medellin</option>
+                                        <option value="Minglanilla">Minglanilla</option>
+                                        <option value="Moalboal">Moalboal</option>
+                                        <option value="Oslob">Oslob</option>
+                                        <option value="Pilar">Pilar</option>
+                                        <option value="Pinamungajan">Pinamungajan</option>
+                                        <option value="Poro">Poro</option>
+                                        <option value="Ronda">Ronda</option>
+                                        <option value="Samboan">Samboan</option>
+                                        <option value="San Fernando">San Fernando</option>
+                                        <option value="San Francisco">San Francisco</option>
+                                        <option value="San Remigio">San Remigio</option>
+                                        <option value="Santa Fe">Santa Fe</option>
+                                        <option value="Santander">Santander</option>
+                                        <option value="Sibonga">Sibonga</option>
+                                        <option value="Sogod">Sogod</option>
+                                        <option value="Tabogon">Tabogon</option>
+                                        <option value="Tabuelan">Tabuelan</option>
+                                        <option value="Tuburan">Tuburan</option>
+                                        <option value="Tudela">Tudela</option>
+                                        <!-- Add more cities as needed -->
+                                    </select>
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <select class="form-control" name="barangay" id="barangay" required>
+                                        <option value="" disabled selected>Barangay</option>
+                                    </select>
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <input type="text" class="form-control" name="zipcode" placeholder="Zip Code" pattern="\d{4,5}" title="Please enter a valid zip code with 4 to 5 digits" required />
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <input type="text" class="form-control" name="username" placeholder="Username" required />
+                                    @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <input type="password" class="form-control" name="password" placeholder="Password" required />
+                                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="col-12 form-group mb-3">
+                                    <input type="password" class="form-control" name="ConfirmPass" placeholder="Confirm Password" required />
+                                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="col-12 form-group mb-3 mb-3">
+                                    @Html.DropDownList("Role", (IEnumerable<SelectListItem>)ViewBag.Role, new { @class = "form-control" })
+                                </div>
+                                <div class="col-12 form-group">
+                                    @if (!String.IsNullOrEmpty(ViewBag.Error as String))
+                                    {
+                                        <div style="color: red;">
+                                            @ViewBag.Error
+                                        </div>
+                                    }
+                                </div>
+                                <p class="signin-link">Already have an account? Click here to <a href="/Home/Login">Login.</a></p>
+                                <div class="col-12 form-group mb-3">
+                                    <input type="submit" class="btn btn-success w-100" value="Create Account" />
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-       
-   }
+        </section>
+
+    }
 
     <section data-bs-version="5.1" class="footer2 cid-uagYZQ5ASz" once="footers" id="footer02-1y">
         <div class="container">
@@ -109,5 +175,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="~/Assets/signup/js/address.js"></script>
 </body>
 </html>
