--- a/FaithConnect/Views/Shared/_Layout.cshtml
+++ b/FaithConnect/Views/Shared/_Layout.cshtml
@@ -167,6 +167,7 @@
                     <!-- group -->
                     <div class="mx-4 nav__btn">
                         <button type="button" class="btn px-4">
+                            <a href="~/Home/Group">
                             <i type="button"
                                class="position-relative fas fa-users text-muted fs-4">
                                 <span class="
@@ -183,6 +184,7 @@
                                     <span class="visually-hidden"></span>
                                 </span>
                             </i>
+                                </a>
                         </button>
                     </div>                   
                 </div>
