--- a/FaithConnect/Views/Shared/_Layout.cshtml
+++ b/FaithConnect/Views/Shared/_Layout.cshtml
@@ -10,10 +10,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @*<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
-    <link rel="preload" as="style" href="~/Assets/Index/index.css">*@
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
           integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
           crossorigin="anonymous"
@@ -186,7 +183,16 @@
                             </i>
                                 </a>
                         </button>
-                    </div>                   
+                    </div>   
+                    <!--Calendar-->
+                    <div class="mx-4 nav__btn">
+                        <button type="button" class="btn px-4">
+                            <a href="~/Home/Calendar">
+                                <i type="button" href="" class="position-relative fas text-muted fs-4">        
+                                </i>
+                            </a>
+                        </button>
+                    </div>                                  
                 </div>
                 <!-- menus -->
                 <div class="col d-flex align-items-center justify-content-end">
