--- a/FaithConnect/Views/Shared/_AdminLayout.cshtml
+++ b/FaithConnect/Views/Shared/_AdminLayout.cshtml
@@ -6,11 +6,11 @@
 <html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Kaiadmin - Bootstrap 5 Admin Dashboard</title>
+    <title>@ViewBag.Title</title>
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
           name="viewport" />
     <link rel="icon"
-          href="~/Assets/Admin/img/kaiadmin/favicon.ico"
+          href="~/Assets/login/img/Logo.ico"
           type="image/x-icon" />
     <!-- Fonts and icons -->
     <script src="~/Assets/Admin/js/plugin/webfont/webfont.min.js"></script>
