--- a/FaithConnect/Views/Shared/_AdminLayout.cshtml
+++ b/FaithConnect/Views/Shared/_AdminLayout.cshtml
@@ -90,6 +90,12 @@
                             <p>Approval</p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="~/Admin/CreateGroup">
+                            <i class="fas fa-object-group"></i>
+                            <p>Create Group</p>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>   
