--- a/FaithConnect/Views/Admin/AdminDashboard.cshtml
+++ b/FaithConnect/Views/Admin/AdminDashboard.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model FaithConnect.Repository.ManageAccountViewModel
+
 @{
     ViewBag.Title = "AdminDashboard";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
