--- a/FaithConnect/Views/Admin/Approval.cshtml
+++ b/FaithConnect/Views/Admin/Approval.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model FaithConnect.Repository.ManageAccountViewModel
+
+@{
     ViewBag.Title = "Approval";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
