--- a/FaithConnect/Views/Shared/_AdminLayout.cshtml
+++ b/FaithConnect/Views/Shared/_AdminLayout.cshtml
@@ -1,6 +1,7 @@
-﻿@model UserInformation
+﻿@model FaithConnect.Repository.ManageAccountViewModel
 @{
-    string profileImage = string.IsNullOrEmpty(Model.Image.FirstOrDefault()?.imageFile) ? Url.Content("~/UploadedFiles/default.png") : Url.Content("~/UploadedFiles/" + Model.Image.FirstOrDefault()?.imageFile);
+    var userInfo = Model.UserInformation;
+    string profileImage = string.IsNullOrEmpty(userInfo.Image.FirstOrDefault()?.imageFile) ? Url.Content("~/UploadedFiles/default.png") : Url.Content("~/UploadedFiles/" + userInfo.Image.FirstOrDefault()?.imageFile);
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -129,16 +130,7 @@
             <nav class="navbar navbar-header navbar-header-transparent navbar-expand-lg border-bottom">
                 <div class="container-fluid">
                     <nav class="navbar navbar-header-left navbar-expand-lg navbar-form nav-search p-0 d-none d-lg-flex">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <button type="submit" class="btn btn-search pe-1">
-                                    <i class="fa fa-search search-icon"></i>
-                                </button>
-                            </div>
-                            <input type="text"
-                                   placeholder="Search ..."
-                                   class="form-control" />
-                        </div>
+                        
                     </nav>
                     <ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
                         <li class="nav-item topbar-icon dropdown hidden-caret d-flex d-lg-none">
@@ -244,7 +236,7 @@
                                 </div>
                                 <span class="profile-username">
                                     <span class="op-7">Hi,</span>
-                                    <span class="fw-bold">@Model.first_name</span>
+                                    <span class="fw-bold">@userInfo.first_name</span>
                                 </span>
                             </a>
                             <ul class="dropdown-menu dropdown-user animated fadeIn">
@@ -257,7 +249,7 @@
                                                      class="avatar-img rounded" />
                                             </div>
                                             <div class="u-text">
-                                                <h4>@Model.first_name</h4>
+                                                <h4>@userInfo.first_name</h4>
                                                 <p class="text-muted">hello@example.com</p>
                                                 <a href="profile.html"
                                                    class="btn btn-xs btn-secondary btn-sm">View Profile</a>
@@ -280,6 +272,8 @@
         @RenderBody()
     </div>
     
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Core JS Files -->
     <script src="~/Assets/Admin/js/core/jquery-3.7.1.min.js"></script>
     <script src="~/Assets/Admin/js/core/popper.min.js"></script>
