--- a/FaithConnect/Views/Shared/_Layout.cshtml
+++ b/FaithConnect/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-
+    <link rel="icon"`
+          href="~/Assets/login/img/Logo.ico"
+          type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
           integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
           crossorigin="anonymous"
@@ -166,20 +168,7 @@
                         <button type="button" class="btn px-4">
                             <a href="~/Home/Group">
                             <i type="button"
-                               class="position-relative fas fa-users text-muted fs-4">
-                                <span class="
-                                      position-absolute
-                                      top-0
-                                      start-100
-                                      translate-middle
-                                      badge
-                                      rounded-pill
-                                      bg-danger
-                                      "
-                                      style="font-size: 0.5rem">
-                                    1
-                                    <span class="visually-hidden"></span>
-                                </span>
+                               class="position-relative fas fa-users text-muted fs-4">       
                             </i>
                                 </a>
                         </button>
@@ -1390,6 +1379,7 @@
     </div>
 </body>
 </html>
+
 
 <script src="~/Assets/Index/js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
